Move touch hit testing to PointerEventManager

Move touch hit testing to PointerEventManager class
to separate pointer event hit testing from touch event
hit testing. Now touch events use the pointer event
hit testing result if they were in the touch capturing
iframe otherwise they do another hit testing.

BUG=606822

Review-Url: https://codereview.chromium.org/1971473002
Cr-Commit-Position: refs/heads/master@{#394802}

Former-commit-id: 5ce73f6e13fdb838a6c92430ca39538ed7e8a452